-- Github issue #100..  Updated Alias logic to:         - Reassign alias serial if a new alias is using an existing expression         - Deny deletion of alias or expression if expression exists in dependent tables
    -- Fix issue where incorrect banner message was displayed when unable to delete alias

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ php/config.php
 js/config.js
 
 # ignore swap files
+*.swp
+*.swo
 ./**/*.swp
 ./**/*.swo
 
@@ -13,3 +15,6 @@ php/lib/*
 
 # ignore font directory
 fonts/*
+
+# ignore version control script
+bumpversion.sh
