--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@ php/lib/*
 # ignore font directory
 fonts/*
 
+# ignore image directory
+images/*
+
 # ignore version control script
 bumpversion.sh
