--- Fixed incorrect educational material include filename 	--- Added DateAdded column to insert hospital maps 	--- Fixed syntax error in notification control delete function 	--- Fixed issue where registration would still continue if no database present 	--- Fixed clinical database dependenecy crash for test result

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,8 @@ backend/php/certificates
 ./**/*.swp
 ./**/*.swo
 
+# ignore QR Images
+images/hospital-maps/qrCodes
+
 # ignore version control script
 bumpversion.sh
