--- Added bower, grunt, and npm support     --- Updated html to fix angular-bootstrap upgrade     --- Fixed syntax errors according to jsLint (damn semicolons...)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ images/hospital-maps/qrCodes
 
 # ignore version control script
 bumpversion.sh
+
+# ignore bower/node components
+bower_components
+node_modules
