--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,9 @@
     "textAngular": "^1.5.16",
     "firebase": "^3.7.2",
     "font-awesome": "^4.7.0",
-    "cryptojslib": "^3.1.2"
+    "cryptojslib": "^3.1.2",
+    "angular-translate": "^2.15.1",
+    "angular-translate-loader-static-files": "^2.15.1",
+    "angular-translate-loader-url": "^2.15.1"
   }
 }
