--- Fixed issue where final checklist was not completing the form on registration     --- Updated config to include firebase project ID

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ publisher/clinical/documents
 
 # ignore certificates
 publisher/php/certificates
+js/firebaseServiceAccountKey.json
 
 # ignore swap files
 *.swp
