--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,6 @@ bumpversion.sh
 
 # ignore bower/node components
 bower_components
-node_modules
+node_modules/**
+# except firebase-admin
+!node_modules/firebase-admin 
