--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular-ui-grid": "^4.0.2",
     "eslint": "^3.18.0",
+    "express": "^4.15.3",
     "firebase": "^3.7.6",
     "firebase-admin": "^4.2.0",
     "grunt": "^1.0.1",
