--- Added phpstorm gitignore 	--- fixed indentation

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,7 @@ bumpversion.sh
 bower_components
 node_modules/**
 # except firebase-admin
-!node_modules/firebase-admin 
+!node_modules/firebase-admin
+
+# ignore idea for PhpStorm
+.idea
