--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^3.7.6",
     "firebase-admin": "^4.2.0",
     "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-wiredep": "^3.0.1",
