--- a/.htaccess
+++ b/.htaccess
@@ -56,3 +56,10 @@ Options +FollowSymLinks
   Header always set X-Content-Type-Options nosniff
 </IfModule>
 
+# Disallow script execution
+Options -ExecCGI
+AddHandler cgi-script .php .pl .py .jsp .asp .htm .shtml .sh .cgi
+
+# Show CGI Source Code
+RemoveHandler cgi-script .pl .py .cgi
+AddType text/plain .pl .py .cgi
