--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,8 @@
     "angular-translate-loader-static-files": "^2.15.1",
     "angular-translate-loader-url": "^2.15.1",
     "angular-multiple-date-picker": "multiple-date-picker#^2.1.6",
-    "angularjs-dropdown-multiselect": "^2.0.0-beta.10"
+    "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
+    "highcharts-ng": "^1.2.0",
+    "highcharts": "^6.1.0"
   }
 }
