--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "angular-multiple-date-picker": "multiple-date-picker#^2.1.6",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "highcharts-ng": "^1.2.0",
-    "highcharts": "^6.1.0"
+    "highcharts": "^6.1.0",
+    "moment-timezone": "^0.5.16"
   }
 }
