--- Added triggers and revisions

--- a/dbv/config.php.sample
+++ b/dbv/config.php.sample
@@ -1,5 +1,10 @@
 <?php
 
+$pathname 	= __DIR__;
+$abspath 	= str_replace('dbv', '', $pathname);
+
+include_once($abspath . 'php/config.php');
+	
 /**
  * Your database authentication information goes here
  * @see http://dbv.vizuina.com/documentation/
