--- Fully removed all programming default config files         -- Now there is one central config     --- Cleaned up packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# ignore configurations
-publisher/modules/Configs.pm
+# ignore configuration file
+config.json
 
 # ignore clinical documents
 publisher/clinical/documents/**
