--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 #
 # Apache/PHP settings:
 #
+php_value max_input_vars 1000000
+php_value post_max_size 1024M
+php_value upload_max_filesize 1024M
 
 # Protect files and directories from prying eyes.
 <FilesMatch "\.(engine|inc|info|install|make|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\..*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock))$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig\.save)$">
