---- Modified git ignore to exclude vscode, push notification test script, and added single quotes for patient ID

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ uploads/**
 publisher/logs/**
 # except readme
 !publisher/logs/README.md
+
+# ignore Visual Studio Code
+.vscode
+
+# ignore push notificaiton test script
+publisher/php/ykmTestNotification.php
+
