--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "semi": [
             "error",
