--- a/.htaccess
+++ b/.htaccess
@@ -66,3 +66,11 @@ AddHandler cgi-script .php .pl .py .jsp .asp .htm .shtml .sh .cgi
 # Show CGI Source Code
 RemoveHandler cgi-script .pl .py .cgi
 AddType text/plain .pl .py .cgi
+
+RewriteRule ^alias/get/alias-chart-logs api/alias/get.alias_chart_logs.php [QSA,L]
+RewriteRule ^alias/get/alias-details api/alias/get.alias_details.php [QSA,L]
+RewriteRule ^alias/get/alias-list-logs api/alias/get.alias_list_logs.php [QSA,L]
+RewriteRule ^alias/get/aliases api/alias/get.aliases.php [QSA,L]
+RewriteRule ^alias/get/color-tags api/alias/get.color_tags.php [QSA,L]
+RewriteRule ^alias/get/expressions api/alias/get.expressions.php [QSA,L]
+RewriteRule ^alias/get/source-databases api/alias/get.source_databases.php [QSA,L]
