--- a/.htaccess
+++ b/.htaccess
@@ -67,6 +67,7 @@ AddHandler cgi-script .php .pl .py .jsp .asp .htm .shtml .sh .cgi
 RemoveHandler cgi-script .pl .py .cgi
 AddType text/plain .pl .py .cgi
 
+# Accesses to the OpalAdmin API
 RewriteRule ^alias/get/alias-chart-logs api/alias/get.alias_chart_logs.php [QSA,L]
 RewriteRule ^alias/get/alias-details api/alias/get.alias_details.php [QSA,L]
 RewriteRule ^alias/get/alias-list-logs api/alias/get.alias_list_logs.php [QSA,L]
@@ -74,3 +75,18 @@ RewriteRule ^alias/get/aliases api/alias/get.aliases.php [QSA,L]
 RewriteRule ^alias/get/color-tags api/alias/get.color_tags.php [QSA,L]
 RewriteRule ^alias/get/expressions api/alias/get.expressions.php [QSA,L]
 RewriteRule ^alias/get/source-databases api/alias/get.source_databases.php [QSA,L]
+RewriteRule ^application/get/application-build api/application/get.application_build.php [QSA,L]
+RewriteRule ^application/get/source-databases api/application/get.source_databases.php [QSA,L]
+RewriteRule ^cron/get/cron-chart-logs api/cron/get.cron_chart_logs.php [QSA,L]
+RewriteRule ^cron/get/cron-details api/cron/get.cron_details.php [QSA,L]
+RewriteRule ^cron/get/cron-list-logs api/cron/get.cron_list_logs.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnoses api/diagnosis-translation/get.diagnoses.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnosis-translation-details api/diagnosis-translation/get.diagnosis_translation_details.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnosis-translations api/diagnosis-translation/get.diagnosis_translations.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-chart-logs api/educational-material/get.educational_material_chart_logs.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-details api/educational-material/get.educational_material_details.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-list-logs api/educational-material/get.educational_material_list_logs.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-parents api/educational-material/get.educational_material_parents.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-types api/educational-material/get.educational_material_types.php [QSA,L]
+RewriteRule ^educational-material/get/educational-materials api/educational-material/get.educational_materials.php [QSA,L]
+RewriteRule ^educational-material/get/phases-in-treatment api/educational-material/get.phases_in_treatment.php [QSA,L]
