Changed method of data from GET to POST for email, filter, hospital-map and legacy-questionnaire.

--- a/.htaccess
+++ b/.htaccess
@@ -90,3 +90,21 @@ RewriteRule ^educational-material/get/educational-material-parents api/education
 RewriteRule ^educational-material/get/educational-material-types api/educational-material/get.educational_material_types.php [QSA,L]
 RewriteRule ^educational-material/get/educational-materials api/educational-material/get.educational_materials.php [QSA,L]
 RewriteRule ^educational-material/get/phases-in-treatment api/educational-material/get.phases_in_treatment.php [QSA,L]
+RewriteRule ^email/get/email-chart-logs api/email/get.email_chart_logs.php [QSA,L]
+RewriteRule ^email/get/email-details api/email/get.email_details.php [QSA,L]
+RewriteRule ^email/get/email-list-logs api/email/get.email_list_logs.php [QSA,L]
+RewriteRule ^email/get/email-templates api/email/get.email_templates.php [QSA,L]
+RewriteRule ^email/get/email-types api/email/get.email_types.php [QSA,L]
+RewriteRule ^filter/get/filters api/filter/get.filters.php [QSA,L]
+RewriteRule ^hospital-map/generate-qr-code api/hospital-map/generate_QR_code.php [QSA,L]
+RewriteRule ^hospital-map/get/hospital-map-details api/hospital-map/get.hospital_map_details.php [QSA,L]
+RewriteRule ^hospital-map/get/hospital-maps api/hospital-map/get.hospital_maps.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaire-chart-logs api/legacy-questionnaire/get.legacy_questionnaire_chart_logs.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaire-details api/legacy-questionnaire/get.legacy_questionnaire_details.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaire-expressions api/legacy-questionnaire/get.legacy_questionnaire_expressions.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaire-list-logs api/legacy-questionnaire/get.legacy_questionnaire_list_logs.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaires api/legacy-questionnaire/get.legacy_questionnaires.php [QSA,L]
+RewriteRule ^legacy-questionnaire/get/legacy-questionnaires api/notification/get.notification_chart_logs.php [QSA,L]
+RewriteRule ^notification/get/notification-chart-logs api/notification/get.notification_chart_logs.php [QSA,L]
+RewriteRule ^notification/get/notification-details api/notification/get.notification_details.php [QSA,L]
+RewriteRule ^notification/get/notification-list-logs api/notification/get.notification_list_logs.php [QSA,L]
