Changed method of data from GET to POST for notifications and patients.

--- a/.htaccess
+++ b/.htaccess
@@ -76,6 +76,7 @@ RewriteRule ^alias/get/color-tags api/alias/get.color_tags.php [QSA,L]
 RewriteRule ^alias/get/expressions api/alias/get.expressions.php [QSA,L]
 RewriteRule ^alias/get/source-databases api/alias/get.source_databases.php [QSA,L]
 RewriteRule ^application/get/application-build api/application/get.application_build.php [QSA,L]
+RewriteRule ^application/get/config config.json [QSA,L]
 RewriteRule ^application/get/source-databases api/application/get.source_databases.php [QSA,L]
 RewriteRule ^cron/get/cron-chart-logs api/cron/get.cron_chart_logs.php [QSA,L]
 RewriteRule ^cron/get/cron-details api/cron/get.cron_details.php [QSA,L]
@@ -108,3 +109,11 @@ RewriteRule ^legacy-questionnaire/get/legacy-questionnaires api/notification/get
 RewriteRule ^notification/get/notification-chart-logs api/notification/get.notification_chart_logs.php [QSA,L]
 RewriteRule ^notification/get/notification-details api/notification/get.notification_details.php [QSA,L]
 RewriteRule ^notification/get/notification-list-logs api/notification/get.notification_list_logs.php [QSA,L]
+RewriteRule ^notification/get/notification-types api/notification/get.notification_types.php [QSA,L]
+RewriteRule ^notification/get/notifications api/notification/get.notifications.php [QSA,L]
+RewriteRule ^patient/email-in-use api/patient/email_in_use.php [QSA,L]
+RewriteRule ^patient/find-patient api/patient/find_patient.php [QSA,L]
+RewriteRule ^patient/get/patient-activities api/patient/get.patient_activities.php [QSA,L]
+RewriteRule ^patient/get/patient-details api/patient/get.patient_details.php [QSA,L]
+RewriteRule ^patient/get/patients api/patient/get.patients.php [QSA,L]
+RewriteRule ^patient/get/security-questions api/patient/get.security_questions.php [QSA,L]
